# nomad-analysis

./: .cruft.json  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yaml  cruft-update.yml  mkdocs-deploy.yml  publish.yml
analysis/: nomad_plugin.yaml
docs/: index.md
src/nomad_analysis/: __init__.py  analysis_source.py  nomad_plugin.yaml  schema.py  utils.py
src/nomad_analysis/general/: __init__.py  schema.py
src/nomad_analysis/jupyter/: __init__.py  schema.py
tests/: conftest.py  test_schema.py
tests/data/: test.archive.yaml
