[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-analysis"
dynamic = ["version"]
description = "A NOMAD plugin for analysis of FAIR data."
readme = "README.md"
authors = [
    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" },
]
maintainers = [
    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" },
    { name = "Jose M. Pizarro", email = "jose.pizarro@physik.hu-berlin.de" },
    { name = "Andrea Albino", email = "andrea.albino@physik.hu-berlin.de" },
    { name = "Hampus Näsström", email = "hampus.naesstroem@physik.hu-berlin.de" },
    { name = "Sebastian Brückner", email = "sebastian.brueckner@ikz-berlin.de" },
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.3.0",
    "nbformat>=5.9.2",
]

[project.urls]
Repository = "https://github.com/ka-sarthak/nomad-analysis"
Documentation = "https://fairmat-nfdi.github.io/nomad-analysis/"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "structlog",
    "python-logstash==0.4.6",
    "mongoengine>=0.20",
    "pyjwt[crypto]==2.6.0",
    "unidecode==1.3.2",
    "fastapi==0.92.0",
    "zipstream-new==1.1.5",
]

[tool.ruff]
include = ["src/nomad_analysis/*.py", "tests/*.py"]


# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]

[project.entry-points.'nomad.plugin']
general_analysis_schema = "nomad_analysis.general:schema"
jupyter_analysis_schema = "nomad_analysis.jupyter:schema"
